--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "huzma",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "license": "MIT",
+  "type": "module",
   "description": "A manifest format for browser-based package managers",
   "scripts": {
     "test": "vitest run",
