--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "huzma",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "license": "MIT",
   "type": "module",
   "description": "A manifest format for browser-based package managers",
@@ -9,18 +9,30 @@
     "test-watch": "vitest watch",
     "ci": "npm run test",
     "docs": "typedoc --out docs src/index.ts",
-    "build-node": "tsc --project tsconfig.json",
+    "build-node": "vite build",
     "build-web": "node ./webBuild.mjs",
     "build": "npm run build-node && npm run build-web"
+  },
+  "bin": {
+    "create": "./cli/create.mjs"
   },
   "dependencies": {
     "small-semver": "^0.1.1"
   },
   "devDependencies": {
+    "@jsdevtools/file-path-filter": "^3.0.2",
+    "@types/command-line-args": "^5.2.0",
+    "@types/semver": "^7.3.13",
+    "command-line-args": "^5.2.1",
     "esbuild": "^0.17.10",
+    "filehound": "^1.17.6",
+    "semver": "^7.3.8",
     "typedoc": "^0.23.25",
     "typescript": "^4.9.5",
-    "vitest": "^0.28.5"
+    "vite": "^4.1.4",
+    "vite-plugin-dts": "^2.1.0",
+    "vitest": "^0.28.5",
+    "zod": "^3.21.4"
   },
   "keywords": [
     "manifest",
@@ -37,6 +49,7 @@
   },
   "main": "dist/index.js",
   "files": [
-    "dist/**/*"
+    "dist/**/*",
+    "cli/**/*"
   ]
 }
