--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "huzma",
-  "version": "0.4.0",
+  "version": "0.4.1",
   "license": "MIT",
   "type": "module",
   "description": "A manifest format for browser-based package managers",
@@ -14,7 +14,7 @@
     "build": "npm run build-node && npm run build-web"
   },
   "bin": {
-    "create": "./cli/create.mjs"
+    "huzma-create": "./cli/create.mjs"
   },
   "dependencies": {
     "small-semver": "^0.1.1"
