--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "huzma",
-  "version": "0.4.2",
+  "version": "0.4.3",
   "license": "MIT",
   "type": "module",
   "description": "A manifest format for browser-based package managers",
@@ -17,22 +17,22 @@
     "huzma-create": "./cli/create.mjs"
   },
   "dependencies": {
-    "small-semver": "^0.1.1"
+    "small-semver": "^0.1.1",
+    "semver": "^7.3.8",
+    "zod": "^3.21.4",
+    "filehound": "^1.17.6",
+    "command-line-args": "^5.2.1",
+    "@jsdevtools/file-path-filter": "^3.0.2"
   },
   "devDependencies": {
-    "@jsdevtools/file-path-filter": "^3.0.2",
     "@types/command-line-args": "^5.2.0",
     "@types/semver": "^7.3.13",
-    "command-line-args": "^5.2.1",
     "esbuild": "^0.17.10",
-    "filehound": "^1.17.6",
-    "semver": "^7.3.8",
     "typedoc": "^0.23.25",
     "typescript": "^4.9.5",
     "vite": "^4.1.4",
     "vite-plugin-dts": "^2.1.0",
-    "vitest": "^0.28.5",
-    "zod": "^3.21.4"
+    "vitest": "^0.28.5"
   },
   "keywords": [
     "manifest",
