finished initial docs

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "browser",
     "dependencies"
   ],
-  "homepage": "https://github.com/moomoolive/huzma",
+  "homepage": "https://moomoolive.github.io/huzma/",
   "bugs": {
     "url": "https://github.com/moomoolive/huzma/issues"
   },
